--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: fitness_api
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    buildCommand: ""
+    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
